--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,9 @@
 # https://rasa.com/docs/rasa/nlu/components/
 language: en
 pipeline:
-  - name: WhitespaceTokenizer
+  - name: SpacyNLP
+  - name: SpacyTokenizer
+  - name: SpacyFeaturizer
   - name: RegexFeaturizer
   - name: LexicalSyntacticFeaturizer
   - name: CountVectorsFeaturizer
@@ -16,12 +18,19 @@ pipeline:
   - name: ResponseSelector
     epochs: 100
 
+
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
   - name: MemoizationPolicy
+    max_history: 5
   - name: TEDPolicy
     max_history: 5
     epochs: 100
   - name: MappingPolicy
-
+  - name: TwoStageFallbackPolicy
+    nlu_threshold: 0.2
+    core_threshold: 0.2
+    fallback_core_action_name: "custom_fallback_action"
+    fallback_nlu_action_name: "custom_fallback_action"
+    deny_suggestion_intent_name: "out_of_scope"
