--- a/config.yml
+++ b/config.yml
@@ -20,9 +20,15 @@ pipeline:
 # https://rasa.com/docs/rasa/core/policies/
 policies:
   - name: MemoizationPolicy
-    max_history : 5
+    max_history: 5
   - name: TEDPolicy
     max_history: 5
     epochs: 100
   - name: MappingPolicy
+  - name: TwoStageFallbackPolicy
+    nlu_threshold: 0.2
+    core_threshold: 0.3
+    fallback_core_action_name: "custom_fallback_action"
+    fallback_nlu_action_name: "custom_fallback_action"
+    deny_suggestion_intent_name: "out_of_scope"
 
